--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --body-color: gray;
+  --body-color: #1c1f26;
   --gameBoard-color: inherit;
   --ship-color: rgba(0, 128, 255, 0.8);
   --ship-hit: rgba(255, 0, 0, 0.8);
@@ -18,18 +18,37 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   height: 100vh;
   width: 100%;
+  gap: 1rem;
+  font-family: "Comic Sans MS", "Baloo", "Poppins", cursive;
+}
+
+body > h1 {
+  font-size: 3rem;
 }
 
 /* Main Section */
 
+.main-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 80%;
+  border-radius: 10px;
+  gap: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 .gameBoards {
   background-color: var(--gameBoard-color);
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 3rem;
+  width: 100%;
+  border-radius: 10px;
 }
 
 /* Player 1, 2 section */
@@ -41,11 +60,16 @@ body {
   align-items: center;
   flex-direction: column;
   font-size: 1.5rem;
-  gap: 0.1rem;
+}
+
+#player1-name,
+#player2-name {
+  font-weight: bold;
 }
 
 #content-player,
 #content-enemy {
+  width: 100%;
   border-left: 1px solid black;
   border-top: 1px solid black;
 
@@ -68,6 +92,12 @@ body {
   border-bottom: 1px solid black;
   background: rgba(255, 255, 255, 0.3);
   opacity: 0.9;
+  text-align: center;
+  font-size: 1.5rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .cell:hover {
@@ -88,4 +118,76 @@ body {
 
 .disabled-cell {
   pointer-events: none;
+}
+
+/* Design */
+
+.message-log {
+  background-color: black;
+  color: green;
+
+  min-width: 80%;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.button-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background-color: antiquewhite;
+  padding: 0.3rem;
+  border: 1px solid black;
+
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+button {
+  font-family: "Comic Sans MS", "Baloo", "Poppins", cursive;
+  font-family: 1rem;
+  padding: 0.3rem;
+  border-radius: 10px;
+}
+
+#randomize-ships-btn {
+  background-color: #ff6666;
+  border: 1px solid #8b0000;
+}
+
+#randomize-ships-btn:hover {
+  background-color: #ffcccc;
+  cursor: pointer;
+}
+
+#randomize-ships-btn:disabled:hover {
+  background-color: #ff6666;
+  cursor: not-allowed;
+}
+
+#start-btn {
+  background-color: #90ee90;
+  border: 1px solid #004400;
+}
+
+#start-btn:hover {
+  cursor: pointer;
+  background-color: #e8f5e9;
+}
+
+#start-btn:disabled:hover {
+  background-color: #90ee90;
+  cursor: not-allowed;
 }
